# BLOsc4SectionsForSuperCollider

./: BLOsc4sections test.scd  BLOsc4sections.cpp  BLOsc4sections.scx  CMakeLists.txt  README.txt
